# PYdvent-Of-Code

./: .gitignore  QUICKSTART.md  README.md  pyproject.toml
aoc/: __init__.py  __main__.py  base.py  cli.py  runner.py
aoc/years/: __init__.py
aoc/years/y2025/: __init__.py
aoc/years/y2025/solutions/: __init__.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py
scripts/: new_day.py
