[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "advent-of-code"
version = "2025.12.1"
description = "Python toolkit for solving Advent of Code puzzles."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "bic-marz" }
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.7.0"
]

[project.scripts]
aoc = "aoc.cli:main"

[tool.setuptools]
packages = ["aoc", "aoc.years"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
