[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "advent-of-code"
version = "2025.12.1"
description = "Python toolkit for solving Advent of Code puzzles."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "bic-marz" }
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[project.scripts]
aoc = "aoc.cli:main"

[tool.setuptools]
packages = ["aoc", "aoc.years"]

[tool.pytest.ini_options]
pythonpath = ["."]
